--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio</title>
+  <title>Bruma</title>
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
+
 </head>
 <body>
   <div class="container">
