--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'n27regular';
+  src: url('/fonts/n27-regular-webfont.eot');
+  src: url('/fonts/n27-regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('/fonts/n27-regular-webfont.woff2') format('woff2'),
+       url('/fonts/n27-regular-webfont.woff') format('woff'),
+       url('/fonts/n27-regular-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 body, html {
   height: 100%;
   margin: 0;
@@ -20,8 +30,10 @@ body, html {
   margin-bottom: 20px;
 }
 
+
 .mensaje {
-  font-family: "N27", sans-serif; 
+  font-family: "n27regular"; 
+  font-weight: normal;
   font-size: 40px;
   margin-top: 20px;
 }
