--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -6,24 +6,46 @@
   <title>Bruma</title>
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
-
 </head>
 <body>
-  <div class="container">
-    <div class="content">
-      <object type="image/svg+xml" data="/images/logo.svg" class="logo-bruma">
-        Tu navegador no admite SVG.
-      </object>
-      
-      <div class="mensaje">
-        COMING SOON.
+  <div class="wrapper">
+    <div class="container">
+      <div class="content">
+        <object type="image/svg+xml" data="/images/logo.svg" class="logo-bruma">
+          Tu navegador no admite SVG.
+        </object>
+        
+        <div class="mensaje">
+          COMING SOON.
+        </div>
       </div>
-
-      <!-- <a href="https://www.instagram.com/bruma_perfume/" target="_blank" rel="noopener noreferrer">
-        <img src="/images/instagram.svg" alt="Instagram Icon" class="instagram-icon">
-      </a> -->
-
     </div>
   </div>
+
+  <hr width="80%;" color="black"> 
+
+  <footer>
+    <div class="footer-section">
+      <object type="image/svg+xml" data="/images/instagram.svg" class="instagram-icon">
+        Tu navegador no admite SVG.
+      </object>
+      <div>
+        <span class="username">BRUMA_PERFUME</span>
+      </div>
+    </div>
+    
+    <div class="footer-section">
+      <object type="image/svg+xml" data="/images/bruma.svg" class="bruma">
+        Tu navegador no admite SVG.
+      </object>
+    </div>
+    <div class="footer-section">
+      <div class="año">
+        &copy; 2023 BRUMA
+      </div>
+    </div>
+  </footer>
+
+
 </body>
 </html>
