--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,16 +8,26 @@
   font-weight: normal;
   font-style: normal;
 }
+
 body, html {
   height: 100%;
   margin: 0;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 85vh;
+}
+
+
+
 .container {
-  height: 100%;
+  flex: 1;
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .content {
@@ -25,22 +35,80 @@ body, html {
 }
 
 .logo-bruma {
-  max-width: 200px; 
+  max-width: 30%; 
   height: auto;
-  margin-bottom: 20px;
 }
 
 
 .mensaje {
   font-family: "n27regular"; 
   font-weight: normal;
-  font-size: 40px;
-  margin-top: 20px;
+  font-size: 60px;
+  margin-top: 60px;
 }
 
 
 .instagram-icon {
   max-width: 40px; 
   height: auto;
-  margin-top: 50%; 
+}
+
+
+
+footer {
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.footer-section {
+  color: black;
+
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.bruma {
+  max-width: 30%;
+  height: auto;
+}
+
+.username{
+  font-family: "n27regular"; 
+  margin-left: 20px;
+}
+.año {
+  font-family: "n27regular"; 
+}
+
+
+
+@media (max-width: 600px) {
+
+  .wrapper {
+    min-height: 75vh;
+  }
+  
+  footer {
+    display: block;
+    text-align: center;
+  }
+
+  .footer-section {
+    margin: 1vh 0;
+  }
+
+  .bruma{
+    margin-top: 5%;
+    margin-bottom: 5%;
+    max-width: 50%;
+
+  }
+
+  .año{
+    font-size: 10 px;
+  }
 }
