Change img source

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -11,37 +11,28 @@
   <div class="wrapper">
     <div class="container">
       <div class="content">
-        <object type="image/svg+xml" data="/images/logo.svg" class="logo-bruma">
-          Tu navegador no admite SVG.
-        </object>
-        
+        <img src="/images/logo.svg" class="logo-bruma" alt="logo-bruma">
         <div class="mensaje">
-          COMING SOON.
+          COMING SOON
         </div>
       </div>
     </div>
   </div>
-
   <hr width="80%;" color="black"> 
-
   <footer>
     <div class="footer-section">
-      <object type="image/svg+xml" data="/images/instagram.svg" class="instagram-icon">
-        Tu navegador no admite SVG.
-      </object>
+      <img src="/images/instagram.svg" class="instagram-icon" alt="instagram">
+
       <div>
-        <span class="username">BRUMA_PERFUME</span>
+        <span class="username">bruma_perfume</span>
       </div>
     </div>
-    
     <div class="footer-section">
-      <object type="image/svg+xml" data="/images/bruma.svg" class="bruma">
-        Tu navegador no admite SVG.
-      </object>
+      <img src="/images/bruma.svg" class="bruma" alt="bruma">
     </div>
     <div class="footer-section">
       <div class="año">
-        &copy; 2023 BRUMA
+        &copy; 2023 by BRUMA
       </div>
     </div>
   </footer>
