Added home view

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,42 +1,48 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bruma</title>
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
+    <meta charset="UTF-8">
+    <title>Bruma</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
 </head>
 <body>
-  <div class="wrapper">
+    <header>
+        <img src="/images/logo.svg" class="logo-header" alt="logo-bruma">
+    </header>
+
     <div class="container">
-      <div class="content">
-        <img src="/images/logo.svg" class="logo-bruma" alt="logo-bruma">
-        <div class="mensaje">
-          COMING SOON
+        <nav class="vertical-menu">
+            <a href="#">Categoría 1</a>
+            <a href="#">Categoría 2</a>
+            <a href="#">Categoría 3</a>
+            <!-- Agrega más categorías según sea necesario -->
+        </nav>
+
+        <div class="content">
+            <div class="product">
+                <img src="/images/1.png" alt="Producto 1">
+                <h2>001<h2>
+            </div>
+
+            <div class="product">
+                <img src="/images/1.png" alt="Producto 2">
+                <h2>002</h2>
+            </div>
+
+            <div class="product">
+                <img src="/images/1.png" alt="Producto 2">
+                <h2>003</h2>
+            </div>
+
+            <div class="product">
+                <img src="/images/1.png" alt="Producto 2">
+                <h2>004<h2>
+            </div>
+
+            <!-- Agrega más productos según sea necesario -->
         </div>
-      </div>
     </div>
-  </div>
-  <hr width="80%;" color="black"> 
-  <footer>
-    <div class="footer-section">
-      <img src="/images/instagram.svg" class="instagram-icon" alt="instagram">
-
-      <div>
-        <span class="username">bruma_perfume</span>
-      </div>
-    </div>
-    <div class="footer-section">
-      <img src="/images/bruma.svg" class="bruma" alt="bruma">
-    </div>
-    <div class="footer-section">
-      <div class="año">
-        &copy; 2023 by BRUMA
-      </div>
-    </div>
-  </footer>
-
 
 </body>
 </html>
