--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -112,3 +112,61 @@ footer {
     font-size: 10 px;
   }
 }
+
+/* HOME */
+header {
+  text-align: center;
+}
+
+.logo-header {
+  max-width: 3%;
+  padding-top: 3%;
+}
+
+
+.container {
+  display: flex;
+}
+
+.vertical-menu {
+  width: 200px;
+  padding: 10px;
+}
+
+.vertical-menu a {
+  font-family: "n27regular"; 
+
+  padding: 8px;
+  text-decoration: none;
+  color: #333;
+  display: block;
+}
+
+.vertical-menu a:hover {
+  color: grey;
+}
+
+.content {
+  font-family: "n27regular"; 
+
+  flex-grow: 1;
+  padding-top: 5%;
+  display: flex;
+  flex-wrap: wrap; /* Permite que los productos se envuelvan a la siguiente línea cuando no hay suficiente espacio */
+}
+
+.product {
+  width: 25%; /* Hace que cada producto ocupe el 25% del ancho del contenedor principal, mostrando 4 productos por fila */
+  box-sizing: border-box;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.product img {
+  max-width: 100%;
+  height: auto;
+}
+
+.product h2 {
+  margin-top: 10px;
+}
