--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bruma</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles_home.css">
     <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
 </head>
 <body>
@@ -13,9 +13,9 @@
 
     <div class="container">
         <nav class="vertical-menu">
-            <a href="#">Categoría 1</a>
-            <a href="#">Categoría 2</a>
-            <a href="#">Categoría 3</a>
+            <a href="#">BRUMA</a>
+            <a href="#"> SCENTED CANDLE</a>
+            <a href="#">CONTACT US</a>
             <!-- Agrega más categorías según sea necesario -->
         </nav>
 
@@ -43,6 +43,21 @@
             <!-- Agrega más productos según sea necesario -->
         </div>
     </div>
+
+    <hr width="80%;" color="black"> 
+
+    <footer>
+        <div class="footer-left">
+            &copy; 2023 by BRUMA
+            <img src="/images/instagram.svg" alt="Instagram Logo">
+        </div>
+        <div class="footer-center"></div>
+        <div class="footer-right">
+            <a href="privacy_policy.html">PRIVACY POLICY
+            </a>&nbsp;&nbsp;&nbsp;|
+            <a href="disclaimer.html">DISCLAIMER</a>
+        </div>
+    </footer>
 
 </body>
 </html>
