--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -16,48 +16,66 @@
             <a href="#">BRUMA</a>
             <a href="#"> SCENTED CANDLE</a>
             <a href="#">CONTACT US</a>
-            <!-- Agrega más categorías según sea necesario -->
         </nav>
 
         <div class="content">
             <div class="product">
-                <img src="/images/1.png" alt="Producto 1">
+                <a>
+                    <img src="/images/1.png" alt="Producto 1">
+                    <img src="/images/2.png" alt="Producto 1">
+                </a>
                 <h2>001<h2>
             </div>
 
             <div class="product">
-                <img src="/images/1.png" alt="Producto 2">
+                <a>
+                    <img src="/images/1.png" alt="Producto 1">
+                    <img src="/images/2.png" alt="Producto 1">
+                </a>
                 <h2>002</h2>
             </div>
 
             <div class="product">
-                <img src="/images/1.png" alt="Producto 2">
+                <a>
+                    <img src="/images/1.png" alt="Producto 1">
+                    <img src="/images/2.png" alt="Producto 1">
+                </a>
                 <h2>003</h2>
             </div>
 
             <div class="product">
-                <img src="/images/1.png" alt="Producto 2">
+                <a>
+                    <img src="/images/1.png" alt="Producto 1">
+                    <img src="/images/2.png" alt="Producto 1">
+                </a>               
                 <h2>004<h2>
             </div>
 
-            <!-- Agrega más productos según sea necesario -->
         </div>
     </div>
 
     <hr width="80%;" color="black"> 
 
     <footer>
-        <div class="footer-left">
-            &copy; 2023 by BRUMA
-            <img src="/images/instagram.svg" alt="Instagram Logo">
+        <div class="footer-section">
+            <div class="año">
+                &copy; 2023 by BRUMA
+            </div>
+        </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <img src="/images/instagram.svg" class="instagram-icon" alt="instagram">
+    
+
         </div>
-        <div class="footer-center"></div>
-        <div class="footer-right">
-            <a href="privacy_policy.html">PRIVACY POLICY
-            </a>&nbsp;&nbsp;&nbsp;|
-            <a href="disclaimer.html">DISCLAIMER</a>
+        <div class="footer-section">
+          <img src="/images/bruma.svg" class="bruma" alt="bruma">
         </div>
-    </footer>
+        <div class="footer-section">
+          <div class="año">
+            <a class="año2" href="">PRIVACY POLICY
+            </a>&nbsp;|
+            <a class="año2" href="">DISCLAIMER</a>          </div>
+        </div>
+      </footer>
 
 </body>
 </html>
