--- a/src/views/product.ejs
+++ b/src/views/product.ejs
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Bruma</title>
+    <link rel="stylesheet" href="/css/styles_product.css">
+    <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
+</head>
+<body>
+    <header>
+        <img src="/images/logo.svg" class="logo-header" alt="logo-bruma">
+    </header>
+
+    <div class="container">
+        <nav class="vertical-menu">
+            <a href="#">BRUMA</a>
+            <a href="#"> SCENTED CANDLE</a>
+            <a href="#">CONTACT US</a>
+        </nav>
+
+        <div class="content">
+            <div class="product">
+                <a>
+                    <img src="/images/9.png" alt="Producto 1">
+                </a>
+                <div class="alternate-images">
+                    <img src="/images/8.png" alt="Alternate Image 1">
+                    <img src="/images/7.png" alt="Alternate Image 2">
+                    <img src="/images/2.png" alt="Alternate Image 3">
+                    <img src="/images/6.png" alt="Alternate Image 4">
+                </div>
+                <h2>001</h2>
+                <p class="description">Tellus in hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum varius duis at consectetur lorem donec massa sapien faucibus et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa eget egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices vitae auctor eu augue ut lectus arcu bibendum at varius vel pharetra vel turpis nunc eget lorem dolor sed viverra ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a cras semper auctor neque vitae tempus quam pellentesque nec nam aliquam</p>
+            </div>
+        </div>
+    </div>
+
+    <hr width="80%;" color="black"> 
+
+    <footer>
+        <div class="footer-section">
+            <div class="año">
+                &copy; 2023 by BRUMA
+            </div>
+        </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <img src="/images/instagram.svg" class="instagram-icon" alt="instagram">
     
+
+        </div>
+        <div class="footer-section">
+          <img src="/images/bruma.svg" class="bruma" alt="bruma">
+        </div>
+        <div class="footer-section">
+          <div class="año">
+            <a class="año2" href="">PRIVACY POLICY
+            </a>&nbsp;|
+            <a class="año2" href="">DISCLAIMER</a>          </div>
+        </div>
+      </footer>
+
+
+      <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Obtiene la imagen principal y las imágenes alternativas
+            const mainImage = document.querySelector('.product img');
+            const alternateImages = document.querySelectorAll('.alternate-images img');
+    
+            // Añade un evento de clic a cada imagen alternativa
+            alternateImages.forEach(function (alternateImage) {
+                alternateImage.addEventListener('click', function () {
+                    // Cambia la imagen principal al hacer clic en la imagen alternativa
+                    mainImage.src = alternateImage.src;
+                    mainImage.alt = alternateImage.alt;
+    
+                    // Ajusta la opacidad y el borde de las imágenes alternativas
+                    alternateImages.forEach(function (img) {
+                        if (img === alternateImage) {
+                            img.classList.add('selected');
+                        } else {
+                            img.classList.remove('selected');
+                        }
+                    });
+                });
+            });
+        });
+    </script>
+
+
+</body>
+</html>
