--- a/src/views/product.ejs
+++ b/src/views/product.ejs
@@ -13,7 +13,7 @@
 
     <div class="container">
         <nav class="vertical-menu">
-            <a href="#">BRUMA</a>
+            <a href="http://localhost:3000/home">BRUMA</a>
             <a href="#"> SCENTED CANDLE</a>
             <a href="#">CONTACT US</a>
         </nav>
