--- a/public/css/styles_product.css
+++ b/public/css/styles_product.css
@@ -31,7 +31,7 @@
 }
   
   .vertical-menu {
-    padding-left: 3%;
+    padding-left: 10%;
     padding-top: 5%;
   }
   
@@ -58,22 +58,21 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    max-width: 1200px; /* Establece un ancho máximo si es necesario */
-    width: 100%; /* Añadido */
-    margin: 0 auto; /* Centra horizontalmente */
+    width: 100%;
+    margin: 0 auto;
 }
 
   
 
   
 .product {
-    flex-basis: 35%;
+    flex-basis: 50%;
     padding: 10px;
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: -15%;
+    margin-left: -25%;
 }
 
 .product h2 {
@@ -82,8 +81,7 @@
 }
 
 .product .description {
-
-    color: #666; /* Color del texto de la descripción */
+    color: #666; 
 }
 
 .product img {
@@ -93,24 +91,24 @@
 
 .alternate-images {
     display: flex;
-    justify-content: space-evenly; /* Ajusta según sea necesario */
-    margin-top: 10px; /* Puedes ajustar esto también según sea necesario */
+    justify-content: space-evenly; 
+    margin-top: 10px;
 }
 
 .alternate-images img {
-    max-width: 15%; /* Ajusta el ancho de las imágenes alternativas según sea necesario */
+    max-width: 10%; 
     height: auto;
-    transition: opacity 0.3s, border 0.3s; /* Agregamos una transición para suavizar el cambio de opacidad y borde */
-    border: 0; /* Asegúrate de que inicialmente no haya borde */
+    transition: opacity 0.3s, border 0.3s; 
+    border: 0; 
 }
 
 .alternate-images img.selected {
-    opacity: 1; /* Establece la opacidad completa para la imagen seleccionada */
-    border: 2px solid black; /* Establece el borde negro para la imagen seleccionada */
+    opacity: 1; 
+    border: 2px solid black;
 }
 
 .alternate-images img:not(.selected) {
-    opacity: 0.6; /* Establece la opacidad para las imágenes no seleccionadas */
+    opacity: 0.6; 
 }
 
 
