--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -13,14 +13,14 @@
 
     <div class="container">
         <nav class="vertical-menu">
-            <a href="#">BRUMA</a>
+            <a href="http://localhost:3000">BRUMA</a>
             <a href="#"> SCENTED CANDLE</a>
             <a href="#">CONTACT US</a>
         </nav>
 
         <div class="content">
             <div class="product">
-                <a>
+                <a href="http://localhost:3000/product">
                     <img src="/images/1.png" alt="Producto 1">
                     <img src="/images/2.png" alt="Producto 1">
                 </a>
@@ -28,7 +28,7 @@
             </div>
 
             <div class="product">
-                <a>
+                <a href="http://localhost:3000/product">
                     <img src="/images/1.png" alt="Producto 1">
                     <img src="/images/2.png" alt="Producto 1">
                 </a>
@@ -36,19 +36,11 @@
             </div>
 
             <div class="product">
-                <a>
+                <a href="http://localhost:3000/product">
                     <img src="/images/1.png" alt="Producto 1">
                     <img src="/images/2.png" alt="Producto 1">
                 </a>
                 <h2>003</h2>
-            </div>
-
-            <div class="product">
-                <a>
-                    <img src="/images/1.png" alt="Producto 1">
-                    <img src="/images/2.png" alt="Producto 1">
-                </a>               
-                <h2>004<h2>
             </div>
 
         </div>
