--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -15,30 +15,30 @@
         <nav class="vertical-menu">
             <a href="http://localhost:3000">BRUMA</a>
             <a href="#"> SCENTED CANDLE</a>
-            <a href="#">CONTACT US</a>
+            <a href="http://localhost:3000/contact">CONTACT US</a>
         </nav>
 
         <div class="content">
             <div class="product">
                 <a href="http://localhost:3000/product">
-                    <img src="/images/1.png" alt="Producto 1">
-                    <img src="/images/2.png" alt="Producto 1">
+                    <img src="/images/001/01.jpg" alt="001">
+                    <img src="/images/001/0001.jpg" alt="001">
                 </a>
                 <h2>001<h2>
             </div>
 
             <div class="product">
                 <a href="http://localhost:3000/product">
-                    <img src="/images/1.png" alt="Producto 1">
-                    <img src="/images/2.png" alt="Producto 1">
+                    <img src="/images/002/02.jpg" alt="002">
+                    <img src="/images/002/0002.jpg" alt="002">
                 </a>
                 <h2>002</h2>
             </div>
 
             <div class="product">
                 <a href="http://localhost:3000/product">
-                    <img src="/images/1.png" alt="Producto 1">
-                    <img src="/images/2.png" alt="Producto 1">
+                    <img src="/images/003/03.jpg" alt="003">
+                    <img src="/images/003/0003.jpg" alt="003">
                 </a>
                 <h2>003</h2>
             </div>
@@ -54,12 +54,13 @@
                 &copy; 2023 by BRUMA
             </div>
         </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a class="bruma" href="instagram.com">
           <img src="/images/instagram.svg" class="instagram-icon" alt="instagram">
-    
+        </a>
 
         </div>
         <div class="footer-section">
-          <img src="/images/bruma.svg" class="bruma" alt="bruma">
+                <img src="/images/bruma.svg" class="bruma" alt="bruma">
         </div>
         <div class="footer-section">
           <div class="año">
