Fixed Products views

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -20,7 +20,7 @@
 
         <div class="content">
             <div class="product">
-                <a href="http://localhost:3000/product">
+                <a href="http://localhost:3000/001">
                     <img src="/images/001/01.jpg" alt="001">
                     <img src="/images/001/0001.jpg" alt="001">
                 </a>
@@ -28,7 +28,7 @@
             </div>
 
             <div class="product">
-                <a href="http://localhost:3000/product">
+                <a href="http://localhost:3000/002">
                     <img src="/images/002/02.jpg" alt="002">
                     <img src="/images/002/0002.jpg" alt="002">
                 </a>
@@ -36,7 +36,7 @@
             </div>
 
             <div class="product">
-                <a href="http://localhost:3000/product">
+                <a href="http://localhost:3000/003">
                     <img src="/images/003/03.jpg" alt="003">
                     <img src="/images/003/0003.jpg" alt="003">
                 </a>
