--- a/public/css/styles_product.css
+++ b/public/css/styles_product.css
@@ -28,6 +28,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    margin-bottom: 5%;
 }
   
   .vertical-menu {
@@ -52,44 +53,67 @@
   .content {
     font-family: "n27regular";
     flex-grow: 1;
-    padding-top: 5%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
     margin: 0 auto;
+    margin-left: -5%;
 }
 
   
 
   
+
+
 .product {
-    flex-basis: 50%;
-    padding: 10px;
-    margin-bottom: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: -25%;
+  flex-basis: 50%;
+  padding: 10px;
+  margin-bottom: 5%;
+  display: flex;
+  align-items: center;
+}
+
+.product-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .product h2 {
-    margin-top: 5%;
-    text-align: center;
+  margin-top: 5%;
+  text-align: center;
 }
 
 .product .description {
-    color: #666; 
+  color: #666;
+  margin-bottom: 10%;
 }
 
+.buy-button {
+  background-color: black;
+  color: white;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+  font-family: "n27regular";
+  margin-top: 10px;
+}
+
+
+
+
+
+
 .product img {
-    max-width: 100%;
-    height: auto;
+  width: 400px;
+  height: 400px;
+  object-fit: cover;
 }
 
 .alternate-images {
     display: flex;
-    justify-content: space-evenly; 
+    justify-content: center; 
     margin-top: 10px;
 }
 
