--- a/src/views/003.ejs
+++ b/src/views/003.ejs
@@ -20,15 +20,20 @@
 
         <div class="content">
             <div class="product">
-                <a>
-                    <img src="/images/003/03.jpg" alt="003">
-                </a>
-                <div class="alternate-images">
-                    <img src="/images/003/03.jpg" alt="003">
-                    <img src="/images/003/0003.jpg" alt="003">
+                <div class="product-images">
+                    <a>
+                        <img src="/images/003/03.jpg" alt="003">
+                    </a>
+                    <div class="alternate-images">
+                        <img src="/images/003/03.jpg" alt="003">
+                        <img src="/images/003/0003.jpg" alt="003">
+                    </div>
                 </div>
-                <h2>001</h2>
-                <p class="description">Tellus in hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum varius duis at consectetur lorem donec massa sapien faucibus et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare massa eget egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices vitae auctor eu augue ut lectus arcu bibendum at varius vel pharetra vel turpis nunc eget lorem dolor sed viverra ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a cras semper auctor neque vitae tempus quam pellentesque nec nam aliquam</p>
+                <div class="product-info">
+                    <h2>003</h2>
+                    <p class="description">Tellus in hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum varius duis at consectetur lorem donec massa sapien faucibus et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi.</p>
+                    <button class="buy-button">COMPRAR</button>
+                </div>
             </div>
         </div>
     </div>
@@ -42,8 +47,6 @@
             </div>
         </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <img src="/images/instagram.svg" class="instagram-icon" alt="instagram">
-    
-
         </div>
         <div class="footer-section">
           <img src="/images/bruma.svg" class="bruma" alt="bruma">
@@ -52,12 +55,12 @@
           <div class="año">
             <a class="año2" href="">PRIVACY POLICY
             </a>&nbsp;|
-            <a class="año2" href="">DISCLAIMER</a>          </div>
+            <a class="año2" href="">DISCLAIMER</a>          
+          </div>
         </div>
-      </footer>
+    </footer>
 
-
-      <script>
+    <script>
         document.addEventListener('DOMContentLoaded', function () {
             // Obtiene la imagen principal y las imágenes alternativas
             const mainImage = document.querySelector('.product img');
@@ -82,7 +85,5 @@
             });
         });
     </script>
-
-
 </body>
 </html>
