--- a/src/views/002.ejs
+++ b/src/views/002.ejs
@@ -13,8 +13,9 @@
 
     <div class="container">
         <nav class="vertical-menu">
-            <a href="http://localhost:3000/home">BRUMA</a>
-            <a href="#"> SCENTED CANDLE</a>
+            <a href="http://localhost:3000">BRUMA</a>
+            <a href="http://localhost:3000/coming_soon"> SCENTED CANDLE</a>
+            <a href="http://localhost:3000/perfume" style="text-decoration: underline"> PERFUME</a>
             <a href="http://localhost:3000/contact">CONTACT US</a>
         </nav>
 
