--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -14,8 +14,8 @@
     <div class="container">
         <nav class="vertical-menu">
             <a href="http://localhost:3000">BRUMA</a>
-            <a href="http://localhost:3000/coming_soon"> SCENTED CANDLE</a>
-            <a href="http://localhost:3000/perfume"> PERFUME</a>
+            <a href="http://localhost:3000/coming_soon"> SCENTED CANDLES</a>
+            <a href="http://localhost:3000/perfume"> PERFUMES</a>
             <a href="http://localhost:3000/contact" style="text-decoration: underline">CONTACT US</a>
         </nav>
 
