--- a/src/views/002.ejs
+++ b/src/views/002.ejs
@@ -14,8 +14,8 @@
     <div class="container">
         <nav class="vertical-menu">
             <a href="http://localhost:3000">BRUMA</a>
-            <a href="http://localhost:3000/coming_soon"> SCENTED CANDLE</a>
-            <a href="http://localhost:3000/perfume" style="text-decoration: underline"> PERFUME</a>
+            <a href="http://localhost:3000/coming_soon"> SCENTED CANDLESa>
+            <a href="http://localhost:3000/perfume" style="text-decoration: underline"> PERFUMES</a>
             <a href="http://localhost:3000/contact">CONTACT US</a>
         </nav>
 
