--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,74 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Bruma</title>
-    <link rel="stylesheet" href="/css/styles_home.css">
-    <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bruma</title>
+  <link rel="stylesheet" href="/css/styles_coming.css">
+  <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
 </head>
 <body>
-    <header>
-        <img src="/images/logo.svg" class="logo-header" alt="logo-bruma">
-    </header>
-
+  <div class="wrapper">
     <div class="container">
-        <nav class="vertical-menu">
-            <a href="http://localhost:3000">BRUMA</a>
-            <a href="#"> SCENTED CANDLE</a>
-            <a href="http://localhost:3000/contact">CONTACT US</a>
-        </nav>
-
-        <div class="content">
-            <div class="product">
-                <a href="http://localhost:3000/001">
-                    <img src="/images/001/01.jpg" alt="001">
-                    <img src="/images/001/0001.jpg" alt="001">
-                </a>
-                <h2>001<h2>
-            </div>
-
-            <div class="product">
-                <a href="http://localhost:3000/002">
-                    <img src="/images/002/02.jpg" alt="002">
-                    <img src="/images/002/0002.jpg" alt="002">
-                </a>
-                <h2>002</h2>
-            </div>
-
-            <div class="product">
-                <a href="http://localhost:3000/003">
-                    <img src="/images/003/03.jpg" alt="003">
-                    <img src="/images/003/0003.jpg" alt="003">
-                </a>
-                <h2>003</h2>
-            </div>
-
+      <div class="content">
+        <img src="/images/logo.svg" class="logo-bruma" alt="logo-bruma">
+        <div class="mensaje">
+          COMING SOON
         </div>
+      </div>
     </div>
+  </div>
+  <hr width="80%;" color="black"> 
+  <footer>
+    <div class="footer-section">
+      <img src="/images/instagram.svg" class="instagram-icon" alt="instagram">
 
-    <hr width="80%;" color="black"> 
+      <div>
+        <span class="username">bruma_perfume</span>
+      </div>
+    </div>
+    <div class="footer-section">
+      <img src="/images/bruma.svg" class="bruma" alt="bruma">
+    </div>
+    <div class="footer-section">
+      <div class="año">
+        &copy; 2023 by BRUMA
+      </div>
+    </div>
+  </footer>
 
-    <footer>
-        <div class="footer-section">
-            <div class="año">
-                &copy; 2023 by BRUMA
-            </div>
-        </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="bruma" href="instagram.com">
-          <img src="/images/instagram.svg" class="instagram-icon" alt="instagram">
-        </a>
-
-        </div>
-        <div class="footer-section">
-                <img src="/images/bruma.svg" class="bruma" alt="bruma">
-        </div>
-        <div class="footer-section">
-          <div class="año">
-            <a class="año2" href="">PRIVACY POLICY
-            </a>&nbsp;|
-            <a class="año2" href="">DISCLAIMER</a>          </div>
-        </div>
-      </footer>
 
 </body>
 </html>
