--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -13,10 +13,10 @@
 
     <div class="container">
         <nav class="vertical-menu">
-            <a href="http://localhost:3000">BRUMA</a>
-            <a href="http://localhost:3000/coming_soon"> SCENTED CANDLES</a>
-            <a href="http://localhost:3000/perfume"> PERFUMES</a>
-            <a href="http://localhost:3000/contact" style="text-decoration: underline">CONTACT US</a>
+            <a href="/">BRUMA</a>
+            <a href="/scented-candles"> SCENTED CANDLES</a>
+            <a href="/perfumes"> PERFUMES</a>
+            <a href="/contact" style="text-decoration: underline">CONTACT US</a>
         </nav>
 
         <div class="content">
