--- a/src/views/002.ejs
+++ b/src/views/002.ejs
@@ -13,10 +13,10 @@
 
     <div class="container">
         <nav class="vertical-menu">
-            <a href="http://localhost:3000">BRUMA</a>
-            <a href="http://localhost:3000/coming_soon"> SCENTED CANDLESa>
-            <a href="http://localhost:3000/perfume" style="text-decoration: underline"> PERFUMES</a>
-            <a href="http://localhost:3000/contact">CONTACT US</a>
+            <a href="/">BRUMA</a>
+            <a href="/scented-candles"> SCENTED CANDLES</a>
+            <a href="/perfumes" style="text-decoration: underline"> PERFUMES</a>
+            <a href="/contact">CONTACT US</a>
         </nav>
 
         <div class="content">
