--- a/public/css/styles_product.css
+++ b/public/css/styles_product.css
@@ -117,7 +117,7 @@
 }
 
 .alternate-images img {
-    max-width: 10%; 
+    max-width: 30%; 
     height: auto;
     transition: opacity 0.3s, border 0.3s; 
     border: 0; 
@@ -183,4 +183,81 @@
     max-width: 25px; 
     height: auto;
   }
-  
+
+
+  @media screen and (max-width: 768px) {
+
+    .logo-header{
+      max-width: 12%;
+    padding-top: 8%;
+    }
+
+    .content {
+      margin-left: 0;
+    }
+
+    .vertical-menu a { 
+      font-size: 15px;
+    }
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .vertical-menu {
+        width: 100%;
+        order: -1;
+        margin-top: 10px;
+    }
+
+    .product {
+        flex-basis: 100%;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .product-info {
+        text-align: center;
+    }
+
+    .product-images{
+      width: 100%;
+    }
+
+    .product img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        margin-bottom: 10px;
+    }
+
+    .alternate-images {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .alternate-images img {
+      max-width: 30%;
+    }
+
+    .product h2,
+    .buy-button,
+    .description {
+        width: 100%;
+    }
+
+    .product h2,
+    .buy-button {
+      order: 1;
+      margin-top: 10px;
+      width: 50%;
+      margin-bottom: 10px;
+    }
+
+    .description {
+        order: 2;
+        text-align: center;
+    }
+}
