--- a/src/views/001.ejs
+++ b/src/views/001.ejs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Bruma</title>
     <link rel="stylesheet" href="/css/styles_product.css">
     <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
+
 </head>
 <body>
     <header>
