Responsive product menu

--- a/public/css/styles_perfume.css
+++ b/public/css/styles_perfume.css
@@ -182,3 +182,50 @@ object-fit: cover;
   max-width: 25px; 
   height: auto;
 }
+
+
+@media screen and (max-width: 768px) {
+
+  .logo-header{
+    max-width: 12%;
+  padding-top: 8%;
+  }
+
+  .content {
+    margin-left: 0;
+  }
+
+  .vertical-menu a { 
+    font-size: 15px;
+  }
+  .container {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .vertical-menu {
+      width: 100%;
+      order: -1;
+      margin-top: 10px;
+  }
+
+  .product {
+    margin-bottom: 0;
+  }
+
+  .año {
+    font-size: 8px;
+  }
+
+  .instagram-icon {
+    max-width: 15px;
+    height: auto;
+  }
+
+  .bruma {
+    max-width: 60%;
+    height: auto;
+  }
+
+  
+}
