--- a/src/views/perfume.ejs
+++ b/src/views/perfume.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Bruma</title>
     <link rel="stylesheet" href="/css/styles_perfume.css">
     <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
