--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Bruma</title>
     <link rel="stylesheet" href="/css/styles_contact.css">
     <link rel="icon" href="/images/logo.svg" type="image/svg+xml">
@@ -38,7 +38,7 @@
                 </div>
             </div>
             
-            <hr style="width: 80%; border: 1px solid black; margin: 20px auto; margin-left: -50px;">
+            <hr class="hr">
             
             <form action="/enviar" method="post">
                 <label for="nombre">Nombre:</label>
